5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4312/executions/1838_2602.log
== SUBMITION (2019-06-24 09:29:23) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array([[2, 1, 4], [1, 2, 0], [2, 3, 2]])

consumo = array([[2200, 650, 1800]]
consumo = consumo.T
					 
r = solve(mat, consumo)
					 
print(round(r, 1)
-- EXECUTION TIME:
0.817982
-- ERROR:
  File "/home/codebench/codes/1838/2602/main.py", line 7
    consumo = consumo.T
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 09:30:58) 
-- CODE:
from numpy import*
from numpy.linalg import*

consumo = array(eval(input("matriz: ")))
mat = array([[2, 1, 4], [1, 2, 0], [2, 3, 2]])

consumo = consumo.T
					 
r = solve(mat, consumo)
					 
print(round(r, 1)
-- ERROR:
File "XXXX", line 12
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 12:37:02) 
-- CODE:
from numpy import*
from numpy.linalg import*

consumo = array(eval(input("matriz: ")))
mat = array([[2, 1, 4], [1, 2, 0], [2, 3, 2]])

consumo = consumo.T
					 
r = dot(inv(mat), consumo)

print("estafilococo: ", round(r[0], 1))
print("salmonela: ", round(r[1], 1))
print("coli: ", round(r[2], 1))

if r[0] == min(r):
	print("estafilococo")
elif r[1] == min(r):
	print("salmonela")
else:
	print("coli")
	
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 12:37:25) 
-- CODE:
from numpy import*
from numpy.linalg import*

consumo = array(eval(input("matriz: ")))
mat = array([[2, 1, 4], [1, 2, 0], [2, 3, 2]])

consumo = consumo.T
					 
r = dot(inv(mat), consumo)

print("estafilococo: ", round(r[0], 1))
print("salmonela: ", round(r[1], 1))
print("coli: ", round(r[2], 1))

if r[0] == min(r):
	print("estafilococo")
elif r[1] == min(r):
	print("salmonela")
else:
	print("coli")
	
print(r)
-- EXECUTION TIME:
1.27131
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
[1923.42  1864.47  -439.015]
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo
[-31711.05   16783.4    12183.555]
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela
[22647.24  -9717.28  -6745.265]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 12:37:51) 
-- CODE:
from numpy import*
from numpy.linalg import*

consumo = array(eval(input("matriz: ")))
mat = array([[2, 1, 4], [1, 2, 0], [2, 3, 2]])

consumo = consumo.T
					 
r = dot(inv(mat), consumo)

print("estafilococo: ", round(r[0], 1))
print("salmonela: ", round(r[1], 1))
print("coli: ", round(r[2], 1))

if r[0] == min(r):
	print("estafilococo")
elif r[1] == min(r):
	print("salmonela")
else:
	print("coli")
	
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 12:39:34) 
-- CODE:
from numpy import*
from numpy.linalg import*

consumo = array(eval(input("matriz: ")))
mat = array([[2, 1, 4], [1, 2, 0], [2, 3, 2]])

consumo = consumo.T
					 
r = dot(inv(mat), consumo)

print("estafilococo: ", round(r[0], 1))
print("salmonela: ", round(r[1], 1))
print("coli: ", round(r[2], 1))

if r[0] == min(r):
	print("estafilococo")
elif r[1] == min(r):
	print("salmonela")
else:
	print("coli")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 12:39:52) 
-- CODE:
from numpy import*
from numpy.linalg import*

consumo = array(eval(input("matriz: ")))
mat = array([[2, 1, 4], [1, 2, 0], [2, 3, 2]])

consumo = consumo.T
					 
r = dot(inv(mat), consumo)

print("estafilococo: ", round(r[0], 1))
print("salmonela: ", round(r[1], 1))
print("coli: ", round(r[2], 1))

if r[0] == min(r):
	print("estafilococo")
elif r[1] == min(r):
	print("salmonela")
else:
	print("coli")
	
-- EXECUTION TIME:
0.881796
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-16 12:03:42) 
-- CODE:
from numpy import*
from numpy.linalg import*

consumo = array(eval(input("matriz: ")))
mat = array([[2, 1, 4], [1, 2, 0], [2, 3, 2]])

consumo = consumo.T
					 
r = dot(inv(mat), consumo)

print("estafilococo: ", round(r[0], 1))
print("salmonela: ", round(r[1], 1))
print("coli: ", round(r[2], 1))

if r[0] == min(r):
	print("estafilococo")
elif r[1] == min(r):
	print("salmonela")
else:
	print("coli")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
